Improve Tree page

--- a/src/components/shared/title/title.scss
+++ b/src/components/shared/title/title.scss
@@ -9,4 +9,6 @@
   margin-top: 0.5em;
   margin-bottom: 1em;
   background-image: radial-gradient($second_color, $main_color);
+  margin-left: 25%;
+  width: 50%;
 }
